[package]
name = "mail-chars"
version = "0.2.0"

authors = ["Philipp Korber <p.korber@1aim.com>"]
license = "MIT/Apache-2.0"

description   = "provids lookup table based char classification for mail related grammars"
readme        = "README.md"
documentation = "https://docs.rs/mail-chars"
repository    = "https://github.com/1aim/mail-chars"
keywords      = []
categories    = ["encoding"]

[badges]
travis-ci = { repository = "1aim/mail-chars", branch = "master" }
maintenance = { status = "actively-developed" }
