[package]
name = "mail-chars"
version = "0.2.1"

authors = ["Philipp Korber <p.korber@dac.eu>"]
license = "MIT/Apache-2.0"

description   = "provids lookup table based char classification for mail related grammars"
readme        = "README.md"
documentation = "https://docs.rs/mail-chars"
repository    = "https://github.com/dac-gmbh/mail-chars"
keywords      = []
categories    = ["encoding"]

[badges]
maintenance = { status = "deprecated" }
